--- a/client/src/css/Admin.css
+++ b/client/src/css/Admin.css
@@ -121,8 +121,9 @@
 
 /* Extra */
 
-/* #pictures-projects-container {
+#pictures-projects-container {
     display: flex;
+    /* justify-content: center; */
     justify-content: space-evenly;
     align-items: center;
     height: 70vh;
@@ -155,6 +156,7 @@
 }
 
 .project-picture-container button:hover {
+    cursor: pointer;
     background-color: rgb(240, 240, 240);
 }
 
@@ -203,7 +205,7 @@
 
 #create-project-container span {
     margin-right: 20px;
-} */
+}
 
 
 
@@ -289,4 +291,18 @@
         outline: none;
         
     }
+
+    #search {
+        --padding: 20px;
+        display: flex;
+        height: 40%;
+        width: 80%;
+        justify-content: center;
+        background: #f6f6f6;
+        align-items: center;
+        padding: var(--padding);
+        border-radius: 40px;
+        transition: padding 0.3s ease;
+    }
+    
 }
