--- a/client/src/css/Services.css
+++ b/client/src/css/Services.css
@@ -86,8 +86,10 @@
 
 #intro-details {
     text-align: center;
-    font-style: italic;
-    font-size: 1.5rem;
+    /* font-style: italic; */
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 1.3rem;
+    
 
     margin-top: 2%;
     
