--- a/client/src/css/Services.css
+++ b/client/src/css/Services.css
@@ -33,11 +33,14 @@
     height: 35%;
     width: 100%;
     /* border: 1px solid black; */
+
     padding-top: 1%;
     padding-left: 1%;
     padding-right: 1%;
 
     margin-top: 2%;
+
+   
 }
 
 .service-img {
@@ -74,6 +77,67 @@
     
 }
 
+/* Trying out new style for images on page */
+
+.service-img {
+    margin-top: 0%;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 80%;
+    /* width: 32%; */
+    width: 10%;
+    background-color: yellow;
+    background-color: rgb(255, 255, 255);
+    background-color: rgb(218, 199, 147);
+    background: radial-gradient(rgb(218, 199, 147), rgba(218, 199, 147, 0.411), rgba(218, 199, 147, 0.089));
+    
+    box-shadow: 0px 0px 10px 0px black;
+    box-shadow: 0px 14px 55px rgba(0, 0, 0, 0.35);
+    box-shadow: 0px 14px 55px rgba(9, 48, 18, 0.911);
+    box-shadow: none;
+
+    /* border-bottom: 10px solid saddlebrown; */
+
+    border: 15px solid rgba(228, 195, 171, 0);
+    /* border-radius: 30px;
+    border-radius: 50%; */
+    border: 5px solid rgb(66, 124, 27);
+    border: 3px solid rgb(165, 122, 42);
+    background-color: rgb(103, 139, 92);
+   
+    /* box-shadow: 0px 0px 11px 15px rgb(228, 195, 171); */
+}
+
+.service-img:hover {
+    cursor: pointer;
+    /* box-shadow: 0 0 20px rgb(8, 70, 8); */
+    
+}
+
+.service-img img {
+    /* border-radius: 50%; */
+    /* height: 90%;
+    width: 80%; */
+
+    height: 100%;
+    width: 100%;
+    background-size: contain;
+    
+    
+}
+
+
+
+
+
+
+
+
+
+
+
 #intro-title {
     
     text-align: center;
@@ -95,13 +159,45 @@
     
 }
 
+#fence-container {
+    position: absolute;
+    top: -300%;
+    height: 8vh;
+    left: 0;
+    width: 30.50%;
+    width: 32.2%;
+    /* border-right: 3px solid rgb(82, 60, 36); */
+    background-color: rgba(0, 0, 0, 0);
+    background-image: url(../images/fence_processed2.png);
+    background-size: contain;
+}
+
+#fence-container-rightside {
+    position: absolute;
+    top: -300%;
+    height: 8vh;
+    right: 0;
+    width: 35.5%;
+    /* border-left: 3px solid rgb(82, 60, 36); */
+    background-color: rgba(0, 0, 0, 0);
+    background-image: url(../images/fence_processed-rightside.png);
+    background-size: contain;
+}
+
 #servicePageBreak {
+    
     /* width: 90%;
     height: 5%;
     background-color: black;
     background-color: rgb(43, 104, 28); */
     position: relative;
     margin-top: 4.5%;
+
+    /* Will need to add this margin for all pageBreaks if desired */
+    margin-top: 10%;
+
+    /* this 10 percent one */
+
     width: 80%;
     height: 0.2%;
     background-color: black;
@@ -481,6 +577,23 @@
     width: 60%;
 }
 
+#services-provided-title {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    margin-top: 2%;
+    
+    height: 20vh;
+    width: 100%;
+    background-color: rgb(103, 139, 92);
+
+    color: white;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 1.8em;
+    letter-spacing: 1px;
+}
+
 #services-provided {
     height: 300vh;
     height: 350vh;
@@ -526,12 +639,18 @@
 }
 
 .service1 {
+    /* border: 3px solid blue; */
+    
+
     height: 50%;
     height: fit-content;
+    height: 100%;
 
     /* background-color: red; */
 
     width: fit-content;
+    width: 25%;
+    
     display: flex;
     flex-direction: column;
     /* justify-content: center; */
@@ -557,13 +676,24 @@
     width: 100%;
 
     margin-top: 3%;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 1.5rem;
     justify-content: flex-start;
     padding-left: 10%;
     
 }
 
+.service-descriptions {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    margin-top: 7%;
+    margin-left: 2%;
+    font-size: 1.2rem;
+    
+}
+
 .service1 button {
+    
+    
     margin-top: 10%;
     /* margin-left: 10%; */
     height: 45px;
@@ -574,6 +704,8 @@
     border: 2px solid rgb(103, 139, 92);
     font-size: 14pt;
     border-radius: 5px;
+
+    
 }
 
 .service1 button:hover {
