--- a/client/src/css/Header.css
+++ b/client/src/css/Header.css
@@ -1,98 +1,39 @@
-.header-container {
-    background-color: #333;
-    /* padding: 10px 20px; */
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 98%;
-    width: 100%;
-    /* position: fixed;
-    top: 0;
-    left: 0; */
-    z-index: 1000;
-    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-}
-
-.logo-container {
-    font-size: 1.5rem;
-    font-weight: bold;
-    color: #fff;
-}
-
-.navlink-container {
-    display: flex;
-    margin-right: 20px;
-}
-
-.navlink-container a {
-    color: #fff;
-    text-decoration: none;
-    margin-left: 20px;
-    transition: 0.5s ease;
-    padding: 10px;
-}
-
-.navlink-container a:hover {
-    background-color: black;
-}
-
-
-
-
 #nav2 {
-    height: 25vh;
-    
-    height: 15vh;
-    width: 100%;
-    padding: 1%;
+    position: relative;
+    height: 23vh;
+    width: 100vw;
+    padding: 2%;
     
     
     display: flex;
     justify-content: space-between;
     align-items: center;
-    /* background-color: #333;
-    background-color: rgb(53, 116, 77); */
-    background-color: rgb(103, 139, 92);
-    background-color: rgb(109, 136, 97);
     background-color: rgb(150, 196, 131);
     
-
-    /* background-color: rgb(252, 252, 252); */
-    /* background-color: rgb(156, 189, 103); */
-    /* background-color: rgb(172, 172, 172); */
-    /* border-bottom: 1vh solid black; */
-    /* background: linear-gradient(180deg, rgb(103, 139, 92), rgb(72, 100, 64), rgb(38, 58, 33)); */
-    
-    /* background-color: rgb(32, 66, 37); */
-    
-
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     z-index: 2;
 }
 
-.logo-container2 {
+.logo-container {
+    display: flex;
+    justify-content: center;
+    align-items: end;
+
+
     position: relative;
     margin-left: 2%;
     height: 100%;
-    width: 40%;
-    display: flex;
-    
+    width: 60%;
+    padding-bottom: 3%;
     gap: 3%;
 
-    font-size: 1.5rem;
     font-family: "Pacifico", cursive;
-    letter-spacing: 4px;
-    /* font-weight: bold; */
-    
-    color: #fff;
-    color: black;
-    
+    font-weight: bold;
 }
 
 #main-logo {
-    height: 100%;
-    width: 25%;
-    width: 14%;
+    height: 50%;
+    width: 100%;
     background-color: rgb(0, 0, 0);
     border: .1em solid black;
 }
@@ -100,66 +41,60 @@
 #main-logo img {
     height: 100%;
     width: 100%;
-    object-fit: cover;
+    /* object-fit: cover; */
     
 }
 
 #company-title {
-    /* color: black; */
     display: flex;
     align-items: center;
+    white-space: nowrap;
+    width: 65%;
+    font-size: 9pt;
+    letter-spacing: 2px;
     
 }
 
-.navlink-container2 {
-    display: flex;
-    font-size: 10pt;
-    /* margin-right: 20px; */
-}
-
-.navlink-container2 a {
-    color: #fff;
-    
-    text-decoration: none;
-    margin-left: 20px;
-    
-    /* margin-left: 1rem; */
-    padding: 10px;
-    transition: 0.5s ease;
-}
-
-.navlink-container2 a:hover {
-    background-color: black;
-    /* background-color: rgb(136, 110, 61); */
-}
-
-
-.navlink-container-mobile {
+.navlink-container {
     display: none;
 }
 
-#tester {
-    height: 10vh;
-    width: 100%;
-    background-color: blue;
+.navlink-container-mobile {
     display: flex;
+    align-items: end;
+    
+    height: 100%;
+    width: 15%;
+    
+}
+
+#mobile-nav {
+    /* background-color: yellow; */
+    display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
+    gap: 20%;
+    height: 30%;
+    width: 100%;
+    
 }
 
-#box {
-    height: 100%;
-    width: 20%;
+.buns {
+    height: 4%;
+    width: 80%;
     background-color: white;
-}
-
-#footer {
-    height: 10vh;
-    background-color: rgb(0, 0, 0);
+    
 }
 
 
-@media (max-width: 600px) {
+
+
+
+
+
+
+@media (min-width: 1600px) {
 
     #nav2 {
         position: relative;
@@ -170,7 +105,7 @@
     }
 
 
-    .logo-container2 {
+    .logo-container {
         
         margin-left: 2%;
         height: 100%;
@@ -221,7 +156,7 @@
 
 
 
-    .navlink-container2 {
+    .navlink-container {
         display: none;
     }
 
@@ -260,13 +195,122 @@
 }
 
 
-@media (min-width: 601px) {
+
+@media (min-width: 2200px) {
     
-    #nav2 {
-        
-    }
+    
+#nav2 {
+    height: 25vh;
+    
+    height: 15vh;
+    width: 100%;
+    padding: 1%;
+    
+    
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    /* background-color: #333;
+    background-color: rgb(53, 116, 77); */
+    background-color: rgb(103, 139, 92);
+    background-color: rgb(109, 136, 97);
+    background-color: rgb(150, 196, 131);
+    
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    z-index: 2;
 }
 
-@media (min-width: 1200px) {
+.logo-container {
+    justify-content: flex-start;
+    align-items: center;
+    position: relative;
+    margin-left: 2%;
+    height: 100%;
+    width: 40%;
+    display: flex;
     
+    gap: 3%;
+    padding-bottom: 0%;
+
+    font-size: 1.5rem;
+    font-family: "Pacifico", cursive;
+    letter-spacing: 4px;
+    /* font-weight: bold; */
+    
+    color: #fff;
+    color: black;
+    
+}
+
+#main-logo {
+    height: 100%;
+    width: 25%;
+    width: 14%;
+    background-color: rgb(0, 0, 0);
+    border: .1em solid black;
+}
+
+#main-logo img {
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+    
+}
+
+#company-title {
+    display: flex;
+    align-items: center;
+    font-size: 1em;
+    letter-spacing: 4px;
+
+    width: 60%;
+    
+}
+
+.navlink-container {
+    display: flex;
+    font-size: 10pt;
+    /* margin-right: 20px; */
+}
+
+.navlink-container a {
+    color: #fff;
+    
+    text-decoration: none;
+    margin-left: 20px;
+    
+    /* margin-left: 1rem; */
+    padding: 10px;
+    transition: 0.5s ease;
+}
+
+.navlink-container a:hover {
+    background-color: black;
+    /* background-color: rgb(136, 110, 61); */
+}
+
+
+.navlink-container-mobile {
+    display: none;
+}
+
+#tester {
+    height: 10vh;
+    width: 100%;
+    background-color: blue;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#box {
+    height: 100%;
+    width: 20%;
+    background-color: white;
+}
+
+#footer {
+    height: 10vh;
+    background-color: rgb(0, 0, 0);
+}
 }
