--- a/client/src/index.css
+++ b/client/src/index.css
@@ -9,15 +9,15 @@ html {
 }
 
 body {
-  min-height: 100vh;
-  display: flex;
+  /* min-height: 100vh;
+  display: flex; */
 }
 
 #root {
-  flex-grow: 1;
+  /* flex-grow: 1;
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: center; */
 }
 
 #app {
@@ -25,23 +25,18 @@ body {
   min-height: 100vh;
   display: flex;
   flex-direction: column;
-  
-
-  /* border: 3px solid black; */
 }
 
 #homePage {
   position: relative;
   display: flex;
   flex-direction: column;
-  /* justify-content: center; */
   align-items: center;
 
   min-height: 100vh;
   width: 100%;
-  /* background-color: red; */
   background-color: rgb(253, 253, 213);
-  border: 5px solid black;
+  /* border: 5px solid black; */
   z-index: 0;
 }
 
@@ -51,13 +46,10 @@ body {
   position: relative;
   display: flex;
   flex-direction: column;
-  /* justify-content: center; */
   align-items: center;
 
   min-height: 100vh;
   width: 100%;
-  /* background-color: red; */
-  /* background-color: rgb(253, 253, 213); */
   border: 5px solid rgb(255, 10, 10);
 }
 
@@ -65,13 +57,10 @@ body {
   position: relative;
   display: flex;
   flex-direction: column;
-  /* justify-content: center; */
   align-items: center;
 
   min-height: 100vh;
   width: 100%;
-  /* background-color: red; */
-  /* background-color: rgb(253, 253, 213); */
   border: 5px solid rgb(255, 10, 10);
 }
 
