--- a/client/src/index.css
+++ b/client/src/index.css
@@ -9,31 +9,48 @@ html {
 }
 
 body {
+  margin: 0;
   /* min-height: 100vh;
   display: flex; */
+
+  /* margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale; */
 }
 
 #root {
-  /* flex-grow: 1;
+  flex-grow: 1;
   display: flex;
   justify-content: center;
-  align-items: center; */
+  align-items: center;
 }
 
-#app {
-  width: 100%;
+
+
+#simple-life-app {
   min-height: 100vh;
+  width: 100%;
+
   display: flex;
   flex-direction: column;
+  
+  
+  background-color: rgb(240, 240, 240);
+  
+  
 }
 
 #homePage {
-  position: relative;
   display: flex;
   flex-direction: column;
+  min-height: 100vh;
+  
+  position: relative;
   align-items: center;
 
-  min-height: 100vh;
   width: 100%;
   background-color: rgb(253, 253, 213);
   /* border: 5px solid black; */
